[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UserInterface/endsong.gd" type="Script" id=1]
[ext_resource path="res://Today's_Dinner_Sound_Track/Nanimo...nakkatta.wav" type="AudioStream" id=2]
[ext_resource path="res://Today's_Dinner_Sound_Track/Fried Potato.wav" type="AudioStream" id=3]
[ext_resource path="res://Today's_Dinner_Sound_Track/Pizza.wav" type="AudioStream" id=4]
[ext_resource path="res://Today's_Dinner_Sound_Track/OutBack.wav" type="AudioStream" id=5]

[node name="endsong" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="end2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="end3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="end4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
